--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Scoreboard</title>
-    <link rel="stylesheet" href="./app.css" />
+     <link rel="stylesheet" href="_css/styles.css">
   </head>
 
   <body>
