--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Scoreboard</title>
-     <link rel="stylesheet" href="_css/styles.css">
+     <link rel="stylesheet" href="css/styles-min.css">
   </head>
 
   <body>
-    
+    <div id="container"></div>
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <script src="./app.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
